--- a/src/security-server/configuration-service/application/build.gradle
+++ b/src/security-server/configuration-service/application/build.gradle
@@ -12,6 +12,7 @@ dependencies {
 
     implementation("org.springframework.boot:spring-boot-starter-actuator")
     implementation("org.springframework.cloud:spring-cloud-config-server")
+    implementation("org.springframework.vault:spring-vault-core")
 }
 
 bootRun {
