--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -56,7 +56,7 @@ apply_local_conf() {
   fi
 }
 
-load_from_properties
+
 
 XROAD_PARAMS="-XX:+UseG1GC -Dfile.encoding=UTF-8 -Xshare:auto -Djdk.tls.ephemeralDHKeySize=2048 \
 -Djavax.xml.accessExternalDTD=\"\" -Djavax.xml.accessExternalStylesheet=\"\" $XROAD_PARAMS"
@@ -76,10 +76,12 @@ detect_deployment_type() {
   export XROAD_DEPLOYMENT_TYPE=native
   export XROAD_APPLICATION_TYPE=$detected_application_type
   export XROAD_CONFIG_SERVER_URI=http://127.0.0.1:5580
-
-  export XROAD_SECRET_STORE_URI=https://127.0.0.1:8200
-  export XROAD_SECRET_STORE_TOKEN=undefined
-  XROAD_SECRET_STORE_TOKEN="$(cat /etc/xroad/secret-store-root-token)"
 }
 
+if [ -f "/etc/xroad/services/secret-store-local.conf" ]; then
+  source /etc/xroad/services/secret-store-local.conf
+fi
+
+load_from_properties
 detect_deployment_type
+
