--- a/src/packages/src/xroad/ubuntu/generic/xroad-base.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-base.service
@@ -4,9 +4,7 @@ Description=X-Road initialization
 [Service]
 Type=oneshot
 RemainAfterExit=yes
-ExecStartPre=/bin/mkdir -p -m0750 /var/run/xroad
-ExecStartPre=/bin/chown xroad:xroad /var/run/xroad
-ExecStopPost=/bin/rm -rf /var/run/xroad
+ExecStart=/bin/true
 
 [Install]
 WantedBy=multi-user.target
