--- a/src/packages/src/xroad/ubuntu/generic/xroad-center-registration-service.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-center-registration-service.service
@@ -2,6 +2,7 @@
 Description=X-Road Central Server Registration Service
 After=network.target xroad-base.service
 Requires=xroad-base.service
+Wants=xroad-configuration-service.service
 StartLimitBurst=5
 StartLimitIntervalSec=40
 
