--- a/src/packages/src/xroad/ubuntu/generic/xroad-confclient.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-confclient.service
@@ -2,6 +2,7 @@
 Description=X-Road confclient
 After=network.target xroad-base.service
 Requires=xroad-base.service
+Wants=xroad-configuration-service.service
 
 [Service]
 User=xroad
