--- a/src/packages/src/xroad/ubuntu/generic/xroad-secret-store-local.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-secret-store-local.service
@@ -1,12 +1,13 @@
 [Unit]
 Description=X-Road OpenBao Auto Unseal Service
-After=openbao.service
+After=network.target openbao.service
 Requires=openbao.service
+BindsTo=openbao.service
 
 [Service]
 Type=oneshot
-User=openbao
-Group=openbao
+User=xroad
+Group=xroad
 ExecStart=/usr/share/xroad/scripts/secret-store-unseal.sh
 RemainAfterExit=yes
 
