chore: spring profile for confproxy (cp)
Refs: XRDDEV-2750

--- a/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
+++ b/src/packages/src/xroad/common/base/etc/xroad/services/global.conf
@@ -68,6 +68,9 @@ detect_deployment_type() {
   # Check for central server specific directories/files
   if [ -f "/etc/xroad/services/centralserver-admin-service.conf" ]; then
     detected_application_type="cs"
+   # Check for configuration proxy specific directories/files
+  elif [ -f "/etc/xroad/services/confproxy.conf" ]; then
+    detected_application_type="cp"
   else
     detected_application_type="ss"
   fi
