fix: add proxy-ui-api service TasksMax=infinity property
Refs: XRDDEV-2759

--- a/src/packages/src/xroad/ubuntu/generic/xroad-proxy-ui-api.service
+++ b/src/packages/src/xroad/ubuntu/generic/xroad-proxy-ui-api.service
@@ -3,11 +3,12 @@ Description=X-Road Proxy UI REST API
 After=network.target xroad-base.service
 Requires=xroad-base.service
 # configure longer StartLimitIntervalSec to prevent eternal restart loop with bad logback config
-StartLimitBurst=10
+StartLimitBurst=5
 StartLimitIntervalSec=40
 
 [Service]
 AmbientCapabilities=CAP_NET_BIND_SERVICE
+TasksMax=infinity
 User=xroad
 Group=xroad
 ExecStart=/usr/share/xroad/bin/xroad-proxy-ui-api
