chore: add comment for fixes

--- a/ansible/roles/xroad-ca/tasks/main.yml
+++ b/ansible/roles/xroad-ca/tasks/main.yml
@@ -19,9 +19,16 @@
       - "uwsgi"
       - "uwsgi-plugin-python3"
 
-- name: download acme2certifier
+- name: download acme2certifier (jammy only)
+  get_url:
+    url: "https://github.com/grindsa/acme2certifier/releases/download/{{ a2c_ver }}/acme2certifier_{{ a2c_ver }}-1_all.deb"
+    dest: /tmp/
+  when: ansible_distribution_release == "jammy"
+
+# get_url option is not yet supported for noble, in python 3.12 is this fixed
+- name: download acme2certifier (noble only)
   shell: "curl -L -o /tmp/acme2certifier_{{ a2c_ver }}-1_all.deb https://github.com/grindsa/acme2certifier/releases/download/{{ a2c_ver }}/acme2certifier_{{ a2c_ver }}-1_all.deb"
-  when: (ansible_distribution_release == "jammy" or ansible_distribution_release == "noble")
+  when: ansible_distribution_release == "noble"
 
 - name: group ca
   group:
