chore: conf proxy packaged deployment update
Refs: XRDDEV-2750

--- a/src/packages/src/xroad/common/confproxy/etc/xroad/services/confproxy.conf
+++ b/src/packages/src/xroad/common/confproxy/etc/xroad/services/confproxy.conf
@@ -14,7 +14,6 @@ done
 
 CP="/usr/share/xroad/jlib/configuration-proxy.jar"
 
-XROAD_CONFPROXY_PARAMS="-Xmx50m -Dlogback.configurationFile=/etc/xroad/conf.d/confproxy-logback.xml \
-$XROAD_CONFPROXY_PARAMS"
+XROAD_CONFPROXY_PARAMS="-Xmx50m $XROAD_CONFPROXY_PARAMS"
 
 apply_local_conf XROAD_CONFPROXY_PARAMS
