--- a/src/packages/src/xroad/ubuntu/generic/control
+++ b/src/packages/src/xroad/ubuntu/generic/control
@@ -79,7 +79,7 @@ Description: X-Road security server
 Package: xroad-confproxy
 Conflicts: xroad-center, xroad-proxy
 Architecture: all
-Depends: ${misc:Depends}, xroad-confclient (=${binary:Version}), xroad-nginx (=${binary:Version}), xroad-signer (=${binary:Version})
+Depends: ${misc:Depends}, xroad-nginx (=${binary:Version}), xroad-signer (=${binary:Version}), xroad-configuration-service (=${binary:Version})
 Pre-depends: xroad-base (=${binary:Version})
 Description: X-Road configuration proxy
  X-Road configuration proxy
@@ -211,6 +211,6 @@ Description: X-Road Central Server Management Service
 
 Package: xroad-configuration-service
 Architecture: all
-Depends: ${misc:Depends}, systemd,  openjdk-21-jre-headless | java21-runtime-headless | java21-runtime
+Depends: ${misc:Depends}, systemd, openjdk-21-jre-headless | java21-runtime-headless | java21-runtime
 Pre-depends: xroad-base (=${binary:Version})
 Description: X-Road Configuration Service
