--- a/ansible/group_vars/all/vars.yml
+++ b/ansible/group_vars/all/vars.yml
@@ -1,4 +1,4 @@
 ---
 #controls lxd versions, if changed, check epel version and repo urls
 centos_releasever: 8
-ubuntu_releasever: jammy
+ubuntu_releasever: noble
