--- a/ansible/roles/init-lxd/tasks/main.yml
+++ b/ansible/roles/init-lxd/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
 - name: Ready all Ubuntu {{ubuntu_releasever}} containers
   with_inventory_hostnames: all:!lxd_servers:!centos_ss:!localhost
-  lxd_container:
+  become: yes
+  community.general.lxd_container:
     name: "{{item}}"
     url: "{{ lxd_url | default(omit) }}"
     state: started
@@ -11,15 +12,16 @@
       server: https://cloud-images.ubuntu.com/releases
       protocol: simplestreams
       alias: "{{ ubuntu_releasever }}"
-    profiles: ["default"]
+    profiles: [ "default" ]
     wait_for_ipv4_addresses: true
+    devices: "{{ hostvars[item].container_ports | default({}) }}"
     timeout: 600
   tags:
     - ubuntu-container-init
 
 - name: Ready all CentOS {{centos_releasever}} containers
   with_inventory_hostnames: centos_ss
-  lxd_container:
+  community.general.lxd_container:
     name: "{{item}}"
     url: "{{ lxd_url | default(omit) }}"
     state: started
@@ -29,7 +31,7 @@
       server: https://images.linuxcontainers.org
       protocol: simplestreams
       alias: centos/{{centos_releasever}}{{ (centos_releasever|int > 7) | ternary('-Stream', '') }}/{{ arch[ansible_architecture] }}
-    profiles: ["default"]
+    profiles: [ "default" ]
     wait_for_ipv4_addresses: true
     timeout: 600
   tags:
