chore: intial setup for lxd based dev env (full setup)

--- a/ansible/xroad_dev.yml
+++ b/ansible/xroad_dev.yml
@@ -1,14 +1,18 @@
 ---
-# This playbook compiles X-Road and installs the compiled packages to the defined host inventory
-
-- hosts: lxd_servers
+- name: Initialize LXD servers
+  hosts: lxd_servers
+  strategy: free
   roles:
     - init-lxd
-  tags: 
+  tags:
     - init
 
-- hosts: ss_servers
+- name: Perform RHEL support check
+  hosts: ss_servers
+  become: true
+  become_user: root
   any_errors_fatal: true
+  strategy: free
   tasks:
     - name: RHEL-support check
       fail:
@@ -17,27 +21,45 @@
         - (variant is defined and variant == "ee")
         - ansible_os_family == "RedHat"
 
-- hosts: compile_servers
+- name: Run compilation tasks
+  hosts: compile_servers
+  strategy: free
   roles:
-    - compile
-  tags: 
+    - role: compile
+  tags:
     - compile
 
-- hosts: compile_servers
+- name: Build packages
+  hosts: compile_servers
+  strategy: free
   roles:
-    - build-packages
+    - role: build-packages
   tags:
     - build-packages
-  
-- hosts: ss_servers, cs_servers, cp_servers
+
+- name: Apply dev env configuration
+  hosts: ss_servers, cs_servers
+  become: true
+  strategy: free
+  roles:
+    - init-dev-configuration
+
+- name: Configure local repositories
+  hosts: ss_servers, cs_servers, cp_servers
+  strategy: free
+  pre_tasks:
+    - name: Check host connectivity
+      ping:
+    - name: Show target hosts
+      debug:
+        msg: "Target hosts in group: {{ groups['ss_servers'] + groups['cs_servers'] + groups['cp_servers'] }}"
   roles:
     - packages-to-local-repo
-  tags:
-    - packages
 
-- hosts: cs_servers
-  become: yes
-  become_user: root
+- name: Install CS servers
+  hosts: cs_servers
+  become: true
+  strategy: free
   roles:
     - xroad-cs
   tags:
@@ -47,9 +69,10 @@
     - vars_files/local_repo.yml
     - vars_files/cs_database.yml
 
-- hosts: cp_servers
-  become: yes
-  become_user: root
+- name: Install CP servers
+  hosts: cp_servers
+  become: true
+  strategy: free
   roles:
     - xroad-cp
   tags:
@@ -58,18 +81,21 @@
   vars_files:
     - vars_files/local_repo.yml
 
-- hosts: ca_servers
-  become: yes
-  become_user: root
+- name: Install CA servers
+  hosts: ca_servers
+  become: true
+  strategy: free
   roles:
     - xroad-ca
   tags:
     - ca
     - install
 
-- hosts: ss_servers
-  become: yes
+- name: Install SS servers
+  hosts: ss_servers
+  become: true
   become_user: root
+  strategy: free
   roles:
     - xroad-ss
   tags:
@@ -78,3 +104,22 @@
   vars_files:
     - vars_files/local_repo.yml
     - vars_files/ss_database.yml
+
+- name: Install IS servers
+  hosts: is_servers
+  become: true
+  strategy: free
+  roles:
+    - xroad-is
+  tags:
+    - is
+    - install
+
+- name: Install Hurl servers
+  hosts: hurl_servers
+  become: true
+  strategy: free
+  roles:
+    - xroad-hurl
+  tags:
+    - hurl
