feat: lxd based dev environment
This mirrors docker setup, but uses LXD containers.

--- a/Docker/xrd-dev-stack/compose.yaml
+++ b/Docker/xrd-dev-stack/compose.yaml
@@ -96,8 +96,8 @@ services:
       - ./wiremock_mappings:/home/wiremock/mappings
   hurl:
     build:
-        context: .
-        dockerfile: ./hurl/Dockerfile
+        context: ../../development/hurl
+        dockerfile: ./Dockerfile
     deploy:
       resources:
         reservations:
