chore: small improvements to lxd deployment

--- a/ansible/roles/xroad-is/tasks/setup-xrd4j.yml
+++ b/ansible/roles/xroad-is/tasks/setup-xrd4j.yml
@@ -3,55 +3,38 @@
   set_fact:
     java_arch_path: "{{ ansible_architecture | regex_replace('x86_64', 'amd64') | regex_replace('aarch64', 'arm64') }}"
 
-- name: Set Java home paths
+- name: Set Java home path
   set_fact:
-    java_11_home: "/usr/lib/jvm/java-11-openjdk-{{ java_arch_path }}"
     java_17_home: "/usr/lib/jvm/java-17-openjdk-{{ java_arch_path }}"
 
 - name: Install required packages
   apt:
     name:
-      - openjdk-11-jdk-headless
       - openjdk-17-jdk-headless
-      - git
+      - curl
+      - jq
     update_cache: yes
     state: present
 
-- name: Create app directory
-  file:
-    path: "/opt/app"
-    state: directory
-    mode: '0755'
-
-- name: Clone XRD4J repository
-  git:
-    repo: https://github.com/nordic-institute/xrd4j.git
-    dest: "/opt/app/xrd4j"
-    clone: yes
-
-- name: Build XRD4J library
-  environment:
-    JAVA_HOME: "{{ java_11_home }}"
-    GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dmaven.repo.local=/opt/app/.m2_repository -Dgradle.user.home=/opt/app/.gradle_home"
+- name: Get latest example-adapter version
   shell: |
-    cd /opt/app/xrd4j/src
-    ./gradlew assemble publishToMavenLocal
-  args:
-    executable: /bin/bash
+    curl -s "https://artifactory.niis.org/api/storage/xroad-maven-snapshots/org/niis/example-adapter/" | \
+    jq -r '.children[] | select(.uri | contains("SNAPSHOT")) | .uri' | \
+    sort -V | tail -n1 | tr -d '/'
+  register: latest_version
 
-- name: Build example-adapter
-  environment:
-    JAVA_HOME: "{{ java_17_home }}"
-    GRADLE_OPTS: "-Dorg.gradle.daemon=false -Dmaven.repo.local=/opt/app/.m2_repository -Dgradle.user.home=/opt/app/.gradle_home"
+- name: Get latest artifact URL
   shell: |
-    cd /opt/app/xrd4j/example-adapter
-    ./gradlew assemble
-  args:
-    executable: /bin/bash
+    curl -s "https://artifactory.niis.org/api/storage/xroad-maven-snapshots/org/niis/example-adapter/{{ latest_version.stdout }}" | \
+    jq -r '.children[] | select(.uri | endswith("-boot.war")) | .uri' | \
+    sort -V | tail -n1 | tr -d '/'
+  register: artifact_filename
 
-- name: Copy example-adapter WAR file
-  shell: |
-    cp /opt/app/xrd4j/example-adapter/build/libs/example-adapter-*-boot.war /example-adapter.war
+- name: Download example-adapter
+  get_url:
+    url: "https://artifactory.niis.org/xroad-maven-snapshots/org/niis/example-adapter/{{ latest_version.stdout }}/{{ artifact_filename.stdout }}"
+    dest: /example-adapter.war
+    mode: '0644'
 
 - name: Create systemd service
   template:
