--- a/Docker/xrd-dev-stack/compose.yaml
+++ b/Docker/xrd-dev-stack/compose.yaml
@@ -8,7 +8,7 @@ services:
         reservations:
           memory: 512M
         limits:
-          memory: 2560M
+          memory: 3G
     healthcheck:
       interval: 5s
       retries: 40
