chore: separate xraod deps repo into separate ansible task

--- a/ansible/roles/xroad-base/tasks/ubuntu.yml
+++ b/ansible/roles/xroad-base/tasks/ubuntu.yml
@@ -23,6 +23,10 @@
 
 - name: Add X-Road apt repo key
   shell: "curl -sL {{ ubuntu_apt_key }} | sudo gpg --dearmor --batch --yes -o {{ ubuntu_apt_key_file }}"
+  when: package_source == "remote" and (ansible_distribution == "Ubuntu")
+
+- name: Add X-Road dependencies apt repo key
+  shell: "curl -sL {{ ubuntu_deps_apt_key }} | sudo gpg --dearmor --batch --yes -o {{ ubuntu_deps_apt_key_file }}"
   when: ansible_distribution == "Ubuntu"
 
 - name: Remove old repo config
@@ -38,7 +42,7 @@
     update_cache: yes
   with_items:
     - "{{ ubuntu_apt_repo_with_option }}"
-    - "deb [{{ubuntu_apt_option}}] https://artifactory.niis.org/artifactory/xroad-dependencies-deb xroad external"
+    - "{{ ubuntu_deps_apt_repo_with_option }}"
   when: ansible_distribution == "Ubuntu"
 
 - name: enable UTF-8 locales
