--- a/Docker/testca/files/acme_srv.cfg
+++ b/Docker/testca/files/acme_srv.cfg
@@ -17,14 +17,17 @@ issuing_ca_crl: /home/ca/CA/crl/ca.crl.pem
 cert_save_path: /home/ca/CA/newcerts
 ca_cert_chain_list: ["/home/ca/CA/certs/ca.cert.pem"]
 openssl_conf: /home/ca/CA/CA.cnf
+cert_db_index_file: /home/ca/CA/index.txt
+cert_serial_file: /home/ca/CA/serial
 #allowed_domainlist: ["foo.bar\\$", "foo1.bar.local"]
 #blocked_domainlist: ["google.com.foo.bar\\$", "host.foo.bar$", "\\*.foo.bar"]
-#save_cert_as_hex: True
+save_cert_as_hex: True
+eab_profiling: True
 #cn_enforce: True
 
-#[EABhandler]
-#eab_handler_file: examples/eab_handler/kid_profile_handler.py
-#key_file: examples/eab_handler/kid_profiles.json
+[EABhandler]
+eab_handler_file: examples/eab_handler/kid_profile_handler.py
+key_file: examples/eab_handler/kid_profiles.json
 
 
 [DBhandler]
@@ -40,3 +43,4 @@ challenge_validation_disable: False
 
 [Order]
 tnauthlist_support: False
+header_info_list: ["HTTP_USER_AGENT"]
