--- a/ansible/roles/xroad-ca/files/acme2certifier/acme_srv.cfg
+++ b/ansible/roles/xroad-ca/files/acme2certifier/acme_srv.cfg
@@ -17,16 +17,17 @@ issuing_ca_crl: /home/ca/CA/crl/ca.crl.pem
 cert_save_path: /home/ca/CA/newcerts
 ca_cert_chain_list: ["/home/ca/CA/certs/ca.cert.pem"]
 openssl_conf: /home/ca/CA/CA.cnf
+cert_db_index_file: /home/ca/CA/index.txt
+cert_serial_file: /home/ca/CA/serial
 #allowed_domainlist: ["foo.bar\\$", "foo1.bar.local"]
 #blocked_domainlist: ["google.com.foo.bar\\$", "host.foo.bar$", "\\*.foo.bar"]
-#save_cert_as_hex: True
+save_cert_as_hex: True
+eab_profiling: True
 #cn_enforce: True
 
 [EABhandler]
-#eab_handler_file: examples/eab_handler/kid_profile_handler.py
-#key_file: examples/eab_handler/kid_profiles.json
-eab_handler_file: examples/eab_handler/file_handler.py
-key_file: examples/eab_handler/key_file.csv
+eab_handler_file: examples/eab_handler/kid_profile_handler.py
+key_file: examples/eab_handler/kid_profiles.json
 
 [DBhandler]
 #dbfile: /var/lib/acme/db.sqlite3
@@ -41,3 +42,4 @@ challenge_validation_disable: False
 
 [Order]
 tnauthlist_support: False
+header_info_list: ["HTTP_USER_AGENT"]
